app.jsx container fixed, overflow fixed

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,21 +1,24 @@
 @import "./vars.css";
 
-.App {
+/* .App {
     background-color: var(--color-bg);
     width: 100%;
     height: 100%;
-}
+} */
 
 
-/* html, body {
+html,
+body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;  prevent horizontal scroll 
+    overflow-x: hidden;
+    /* prevent horizontal scroll */
 }
 
 .App {
     background-color: var(--color-bg);
     width: 100%;
-    min-height: 100vh;  cover full screen height 
+    min-height: 100vh;
+    /* cover full screen height */
     overflow-x: hidden;
-} */
+}
