--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -3,8 +3,8 @@
 .container {
     color: var(--color-text);
     margin-top: 79px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 0 10%;
+    margin-right: 0 10%;
 }
 
 .title {
