--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -19,6 +19,10 @@
     color: var(--color-text);
 }
 
+.menuBtn {
+    display: none;
+}
+
 .menu {
     display: flex;
 }
@@ -46,7 +50,7 @@
     .menu {
         position: absolute;
         right: 0px;
-        margin-right: 10%;
+        margin-right: 0 10%;
         flex-direction: column;
         align-items: flex-end;
         gap: 11px;
